--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "8.1.0",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "eslint-plugin-react": "7.20.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
