--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "node": "10"
   },
   "dependencies": {
-    "axios": "0.20.0",
+    "axios": "^0.20.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "4.0.5",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
     "redux-mock-store": "1.5.4",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "2.3.0"
   }
 }
